FLEX-BISON/utils/prototype_syntax_analysis/calc_action_hc.output
Grammar

    0 $accept: start $end

    1 start: line

    2 line: assignment SCLN
    3     | line assignment SCLN

    4 assignment: IDENTIFIER ET exp

    5 exp: term
    6    | exp ADD term
    7    | exp SBTR term
    8    | exp MULT term
    9    | exp DIV term

   10 term: DIGIT
   11     | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
DIGIT (258) 10
IDENTIFIER (259) 4 11
ET (260) 4
ADD (261) 6
SBTR (262) 7
MULT (263) 8
DIV (264) 9
SCLN (265) 2 3


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
start (12)
    on left: 1, on right: 0
line (13)
    on left: 2 3, on right: 1 3
assignment (14)
    on left: 4, on right: 2 3
exp (15)
    on left: 5 6 7 8 9, on right: 4 6 7 8 9
term (16)
    on left: 10 11, on right: 5 6 7 8 9


State 0

    0 $accept: . start $end

    IDENTIFIER  shift, and go to state 1

    start       go to state 2
    line        go to state 3
    assignment  go to state 4


State 1

    4 assignment: IDENTIFIER . ET exp

    ET  shift, and go to state 5


State 2

    0 $accept: start . $end

    $end  shift, and go to state 6


State 3

    1 start: line .
    3 line: line . assignment SCLN

    IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (start)

    assignment  go to state 7


State 4

    2 line: assignment . SCLN

    SCLN  shift, and go to state 8


State 5

    4 assignment: IDENTIFIER ET . exp

    DIGIT       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    exp   go to state 11
    term  go to state 12


State 6

    0 $accept: start $end .

    $default  accept


State 7

    3 line: line assignment . SCLN

    SCLN  shift, and go to state 13


State 8

    2 line: assignment SCLN .

    $default  reduce using rule 2 (line)


State 9

   10 term: DIGIT .

    $default  reduce using rule 10 (term)


State 10

   11 term: IDENTIFIER .

    $default  reduce using rule 11 (term)


State 11

    4 assignment: IDENTIFIER ET exp .
    6 exp: exp . ADD term
    7    | exp . SBTR term
    8    | exp . MULT term
    9    | exp . DIV term

    ADD   shift, and go to state 14
    SBTR  shift, and go to state 15
    MULT  shift, and go to state 16
    DIV   shift, and go to state 17

    $default  reduce using rule 4 (assignment)


State 12

    5 exp: term .

    $default  reduce using rule 5 (exp)


State 13

    3 line: line assignment SCLN .

    $default  reduce using rule 3 (line)


State 14

    6 exp: exp ADD . term

    DIGIT       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    term  go to state 18


State 15

    7 exp: exp SBTR . term

    DIGIT       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    term  go to state 19


State 16

    8 exp: exp MULT . term

    DIGIT       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    term  go to state 20


State 17

    9 exp: exp DIV . term

    DIGIT       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    term  go to state 21


State 18

    6 exp: exp ADD term .

    $default  reduce using rule 6 (exp)


State 19

    7 exp: exp SBTR term .

    $default  reduce using rule 7 (exp)


State 20

    8 exp: exp MULT term .

    $default  reduce using rule 8 (exp)


State 21

    9 exp: exp DIV term .

    $default  reduce using rule 9 (exp)
